# plonky2-ecdsa-with-sha256

./: Cargo.toml
src/: lib.rs  main.rs
src/gadgets/: curve_fixed_base.rs  curve_windowed_mul.rs  glv.rs  mod.rs  nonnative.rs  split_nonnative.rs
src/hash/: keccak256.rs  merkle_utils.rs  sha256.rs  sha256_merkle.rs  types.rs
src/nonnative/gadgets/: biguint.rs
src/u32/gadgets/: arithmetic_u32.rs  interleaved_u32.rs
src/u32/gates/: interleave_u32.rs  uninterleave_to_b32.rs  uninterleave_to_u32.rs
