[package]
name = "plonky2_ecdsa"
description = "ECDSA gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
parallel = ["plonky2_maybe_rayon/parallel", "plonky2/parallel"]

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false }
plonky2_maybe_rayon = { version = "0.1.1", default-features = false }
num = { version = "0.4.0", default-features = false }
plonky2 = { version = "0.1.4", default-features = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "2.2.0", features = ["hex"] }
hex = { version = "0.4.3" }
sha2 = { version = "0.10.6" }

[dev-dependencies]
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
sha2 = { version = "0.10.6" }
sha3 = { version = "0.10.6" }
serde_json = "1.0"
